@@ -329,6 +329,19 @@ may be repeated to follow more levels of pointers.
 $var[N]
 indexes into an array.  The index is given with a
 literal number.
+.TP
+$$vars
+expands to a character string that is equivalent to
+sprintf("parm1=%x ... parmN=%x var1=%x ... varN=%x", parm1, ..., parmN,
+var1, ..., varN)
+.TP
+$$locals
+expands to a character string that is equivalent to
+sprintf("var1=%x ... varN=%x", var1, ..., varN)
+.TP
+$$parms
+expands to a character string that is equivalent to
+sprintf("parm1=%x ... parmN=%x", parm1, ..., parmN)
 .PP
 For ".return" probes, context variables other than the "$return"
 value itself are only available for the function call parameters.
